add background & textcolor

--- a/lin.html
+++ b/lin.html
@@ -1,11 +1,18 @@
 <DOCTYPE html>
 <html lang="zh>
+
 <head>
 <meta charset="uft-8">
+<style>
+.p1{
+	color:red;
+}
+</style>
 </head>
-<body>
+
+<body style="background:lightblue">
 <h1>Heading</h1>
-<p>ix gol jti d , gl jn iwn tu </p>
+<p class="p1">ix gol jti d , gl jn iwn tu </p>
 </body>
 </html>
 
