--- a/lin.html
+++ b/lin.html
@@ -4,6 +4,12 @@
 <head>
 <meta charset="uft-8">
 <style>
+.head{
+	background:yellow;
+	color:blue;
+	border:1px solid green;
+}
+
 .p1{
 	color:red;
 }
