add head style two

--- a/lin.html
+++ b/lin.html
@@ -17,7 +17,7 @@
 </head>
 
 <body style="background:lightblue">
-<h1>Heading</h1>
+<h1 class="head">Heading</h1>
 <p class="p1">ix gol jti d , gl jn iwn tu </p>
 </body>
 </html>
