--- a/lin.html
+++ b/lin.html
@@ -20,6 +20,7 @@
 <body style="background:lightblue">
 <h1 class="head">Heading</h1>
 <p class="p1">Just <strong>test</strong></p>
+<h6 style="color:white">Small word<h6>
 </body>
 </html>
 
