--- a/lin.html
+++ b/lin.html
@@ -18,7 +18,7 @@
 </head>
 
 <body style="background:lightblue">
-<h1 class="head">Heading</h1>
+<h1 class="head">Hea<sub>d</sub>ing</h1>
 <p class="p1">Just <strong>test</strong></p>
 <h6 style="color:white">Small word<h6>
 </body>
