--- a/lin.html
+++ b/lin.html
@@ -5,7 +5,7 @@
 <meta charset="uft-8">
 <style>
 .head{
-	background:yellow;
+	background:red;
 	color:blue;
 	border:1px solid green;
 	text-align:center;
