--- a/lin.html
+++ b/lin.html
@@ -14,13 +14,28 @@
 .p1{
 	color:red;
 }
+
+table, tr, td{
+border:1px solid red
+}
 </style>
 </head>
 
 <body style="background:lightblue">
-<h1 class="head"><sub>H</sub><sup>e</sup><sub>a</sub><sup>d</sup><sub>i</sub><sup>n</sup><sub>g</sub></h1>
+<h1 class="head">Heading</h1>
 <p class="p1">Just <strong>test</strong></p>
 <h6 style="color:white">Small word<h6>
+<table>
+<caption>1234567890</caption>
+<tr>
+<td>1</td>
+<td>2</td>
+</tr>
+<tr>
+<td>3</td>
+<td>4</td>
+</tr>
+</table>
 </body>
 </html>
 
