--- a/lin.html
+++ b/lin.html
@@ -5,7 +5,7 @@
 <meta charset="uft-8">
 <style>
 .head{
-	background:red;
+	background:yellow;
 	color:blue;
 	border:1px solid green;
 	text-align:center;
@@ -16,13 +16,14 @@
 }
 
 table, tr, td{
-border:1px solid red
+border:1px solid red;
+border-collapse:collapse;
 }
 </style>
 </head>
 
 <body style="background:lightblue">
-<h1 class="head">Hea<sub>d</sub>ing</h1>
+<h1 class="head">Heading</h1>
 <p class="p1">Just <strong>test</strong></p>
 <h6 style="color:white">Small word<h6>
 <table>
